--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="#" class="nav-link h6" style="font-weight: bold;">Institiute of Professional Development</a>
+                <a href="/index.html" class="nav-link h6" style="font-weight: bold;">Institiute of Professional Development</a>
             </li>
         </ul>
         
@@ -87,7 +87,7 @@
                     <a class="nav-link page-scroll" href="#contact">CONTACT</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">BLOG</a>
+                    <a class="nav-link page-scroll" href="/blog.html" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">BLOG</a>
                 </li>
             </ul>
             <!-- <span class="nav-item social-icons">
