--- a/aboutus.html
+++ b/aboutus.html
@@ -105,7 +105,7 @@
     <img src="/images/slider-images/slider-image-1.jpg" alt="">
     <div class="overlay"></div>
     <div class="text">
-        <h2>Increasing <span class="auto-typed"></span></h2>
+        <h2>Our <span class="auto-typed"></span></h2>
     </div>
 </div>
 
