about-to-complete

--- a/blog.html
+++ b/blog.html
@@ -262,13 +262,14 @@
         </div>
     </section>
 
-    <div class="footer">
+      <!-- Footer -->
+      <div class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
                     <div class="footer-col first">
-                        <h5>About IPD</h5>
-                        <p class="p-small">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non, debitis.</p>
+                        <h5>IPD</h5>
+                        <p class="p-small">Institute of professional development KIU</p>
                     </div>
                 </div> <!-- end of col -->
                 <div class="col-md-3">
@@ -277,15 +278,15 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="#">Terms & Conditions</a></div>
+                                <div class="media-body"><a target="_blank" href="https://www.kiu.edu.pk/">KIU</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="#">Privacy Policy</a></div>
+                                <div class="media-body"><a target="_blank" href="https://navttc.gov.pk/">NAVTAC</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="#">Article Details</a></div>
+                                <div class="media-body"><a target="_blank" href="blog.html">Blogs</a></div>
                             </li>
                         </ul>
                     </div>
@@ -296,15 +297,15 @@
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="#">Article Details</a></div>
+                                <div class="media-body"><a target="_blank" href="contact.html">Contact Us</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="#">Terms & Conditions</a></div>
+                                <div class="media-body"><a target="_blank" href="courses.html">Courses</a></div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body"><a href="#">Privacy Policy</a></div>
+                                <div class="media-body"><a target="_blank" href="index.html">Home</a></div>
                             </li>
                         </ul>
                     </div>
